--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,7 +92,7 @@
               <a href="{{post.code}}">code</a> /
               {% endif %}
               {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
+              <a href="{{ site.baseurl }}/{{post.poster}}">poster</a> /
               {% endif %}
               {% if post.slides %}
               <a href="{{post.slides}}">slides</a> /
