--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
                 <a href="https://github.com/Ilovecodingforever">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=GTiu_p0AAAAJ&hl=en&inst=3203679203499159833">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/mingzhuliu/"> LinkedIn </a>
+                <a href="{{ site.baseurl }}/pdfs/cv.pdf"> CV </a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
