--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
                 <a href="mailto:mingzhul+website@andrew.cmu.edu"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/Ilovecodingforever">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=GTiu_p0AAAAJ&hl=en&inst=3203679203499159833">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/mingzhuliu/"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/mingzhuliu/"> LinkedIn </a> &nbsp;/&nbsp;
                 <a href="{{ site.baseurl }}/pdfs/cv.pdf"> CV </a>
               </p>
             </td>
